fix word wrap on not burke comment

--- a/app/assets/stylesheets/partials/_comment.sass
+++ b/app/assets/stylesheets/partials/_comment.sass
@@ -33,6 +33,10 @@
     p
       line-height: 1.5em
       margin-bottom: 0.5em
+      word-break: break-word
+      -webkit-hyphens: auto
+      -moz-hyphens: auto
+      hyphens: auto
       &.comment-detail
         color: transparentize($dark-gray, 0.5)
         font-size: 0.9em
